--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Charlotte Hornets Trivia!!!</h1>
+                <h1 class="mainHead">Charlotte Hornets Trivia!!!</h1>
             </div>
         </div>
         <div class ="row headers">
